static/css/home.css
/* Static CSS file or inline style */

main {
  background-image: url('../../static/images/bg.png');
  background-size: cover;
  background-repeat: no-repeat;
}
:root{
  /* --blue: white;#Ffa07a replace with orange */
  --white: #fff;
  --highlight: /*#f5f5f5;*/rgb(228, 95, 65);
  --black1: white;
  --black2: #999;
  --darkbg: #0D1117;
  /* --body-color: var(--white); */
  --body-color: #fffaf7;
  --body-rgba: rgba(255, 250, 247, 1);
  --card: var(--white); 
}


.section {
  padding: 30px 10px;
  width: 100%;

}

.home {

  /* display: flex; */
  /* flex-direction: row; */
  /* align-items: center; */
  /* justify-content: center; */
}
#header {
  height: 30vw;
  min-height: 200px;
  max-height: 300px;
}

header {
  background-image: url('../../static/images/home-headline1.png');
  background-size: cover;
  background-repeat: no-repeat;
  /* center image */
  background-position: center;
  
  /* round edge */
  border-radius: 15px;
  margin: 0 20px;
  /* position: absolute; */
  /* top: 3%; */

  /* height: 280px; */
  height: 30vw;
  min-height: 200px;
  max-height: 300px;

  width: calc(100% - 40px);
  /* z-index: -1; */
}


.page-head {
  height: 30vw;
  min-height: 200px;
  max-height: 300px;

  padding: auto;
  /* position: relative; */
  /* z-index: 1; */
  width: 100%;
  /* display: block; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: #fff;
}

.page-head h1 {
  font-weight: bold;
  font-size: 8vw;
  line-height: 46px;
  margin: 21px auto;
}

.home-main {
  margin: auto;
  width: 100vw;
  max-width: 1100px;
  /* widht 100% - 100px */
  /* width: calc(100% - 200px); */
  /* width: 100%; */
}



.skill {
  width: 200px;
  margin: 8px;
  /* padding-right: 30px; */
}

.skill{
  /* background-color: var(--darkbg);
  color: #FFB072;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.4); */
  /* padding: 10px; */
}
.skill-section {
  margin-bottom: 3px;
  /* background-color:  rgb(255, 192, 170); */
  background-color: var(--card);
  color: var(--black2);
  border-radius: 10px;
  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.4);
  padding: 10px;
}
.skill-section p {
  margin: 0;
  margin-top: 5px;
  font-size: 14px;
  font-weight: normal;
}

.skill-bar-container {
  position: relative;
  width: 100%;
  height: 5px;
}

.skill-section h3 {
  margin-top: 0px;
  padding-left: 0px;
  color: black;
  font-size: 18px;
  font-weight: bold;
}

.skill-score {
  margin: 20px 0;
}

.skill-score p {
  margin-bottom: 3px;
  color: black;
}
.skill-bar-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 5px;
  background-color: rgb(235, 229, 229);
  border-radius: 3px;
}

.skill-bar {
  position: absolute;
  top: 0;
  left: 0;
  height: 5px;
  background-color: var(--highlight);
  border-radius: 3px;
}

h3 {
  font-weight: 600;
  font-size: 32px;
  line-height: 41px;
  padding-left: 10px;
  margin-top: 25px;
  /* color: rgb(128, 128, 128); */
  color: #17181d;
}

#field-description {
  padding-left: 10px;
  max-width: 450px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 300;
  text-align: left;
  margin-bottom: 10px;
  color: var(--black2);
}

.outer {
  padding: 0 5px;
}

.intro-section {
  position: relative;
  padding: 10px;
  /* background-color: #FFA599; */
  background-color: rgb(255, 192, 170);
  color: black;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.4);
  margin: 30px 10px 10px 10px;
}

.intro-section .inner {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.intro-section .user-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  padding: 10px;
}

.intro-section .user-section h4 {
  margin: 0;
  font-size: 28px;
  font-weight: bold;
}

.intro-section .user-section p {
  margin: 0;
  margin-top: 5px;
  font-size: 14px;
  font-weight: normal;
}

.intro-section .user-section .btn {
  margin-top: 15px;
  margin-bottom: 5px;
  /* margin-left: 10px; */
  margin-right: 10px;
  /* background-color: #FFA599; */
  background-color:  var(--highlight);
  color: white;
  border: none;
  border-radius: 5px;
  padding: 10px;
  font-size: 14px;
  font-weight: bold;
  cursor: pointer;
  box-shadow: 0 4px 6px rgb(0, 0, 0, 0.4);
}

.intro-section .character {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
}

.intro-section .character img {
  /* position: absolute;  */
  /* width: 15%; */
  /* height: 200px; */
  /* width: 100px; */
  /* border-radius: 50%; */
  /* border: 2px solid white; */
  margin-bottom: 10px;
}

.intro-section .character .boy {
  position: absolute;
  height: 280px;
  top: -45px; 
  right: 1%;
}

.intro-section .character .girl {
  position: absolute;
  height: 210px;
  top: -30px; 
  right: 20%;
}



#specialization-container {
  display: flex;
  flex-wrap: wrap !important;
  justify-content: space-evenly;
  align-content: flex-start;
  gap: 20px 10px;
  max-height: 600px;
  /* hide or dont show out of thee div */
  overflow: hidden;
}

#specialization-container .card-link {
  min-width: 120px;
  flex-basis: 20%;
  
}


.card.specialization {
  /* height: 100px;
  width: 220px;
  min-height: 100px;
  min-width: 220px;
  max-height: 100px;
  max-width: 220px; */
  overflow: hidden;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.card-container::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.card-container {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}
.card-container {
  display: flex;
  overflow: auto;
  position: relative;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;
  align-content: flex-start;
  gap: 20px;
  padding: 10px;
 
}
/* ... */

